force-app/main/default/objects/C_Section_Response__c/C_Section_Response__c.object-meta.xml
<CustomObject>
    <description>Captures section-level response data and scoring within a form submission</description>
    <label>Section Response</label>
    <nameField>
        <label>Section Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Section Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>