force-app/main/default/objects/C_Section_Response__c/fields/C_Excluded_From_Weight__c.field-meta.xml
<CustomField>
    <fullName>C_Excluded_From_Weight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded From Weight</label>
    <type>Checkbox</type>
</CustomField>