force-app/main/default/objects/C_Section_Response__c/fields/C_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>C_Form_Submission__c</fullName>
    <label>Form Submission</label>
    <referenceTo>C_Form_Submission__c</referenceTo>
    <relationshipLabel>Section Responses</relationshipLabel>
    <relationshipName>C_Section_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>