force-app/main/default/objects/C_Section_Response__c/fields/C_Max_Points__c.field-meta.xml
<CustomField>
    <fullName>C_Max_Points__c</fullName>
    <label>Max Points</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>