force-app/main/default/objects/C_Section_Response__c/fields/C_Score__c.field-meta.xml
<CustomField>
    <fullName>C_Score__c</fullName>
    <label>Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>