force-app/main/default/objects/C_Section_Response__c/fields/C_Section__c.field-meta.xml
<CustomField>
    <fullName>C_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>C_Section__c</referenceTo>
    <relationshipLabel>Section Responses</relationshipLabel>
    <relationshipName>C_Section_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>