force-app/main/default/objects/C_Section_Response__c/fields/C_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>C_Section_Name__c</fullName>
    <label>Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>