force-app/main/default/objects/C_Section_Response__c/listViews/All_Section_Responses.listView-meta.xml
<ListView>
    <fullName>All_Section_Responses</fullName>
    <columns>NAME</columns>
    <columns>C_Form_Submission__c</columns>
    <columns>C_Section_Name__c</columns>
    <columns>C_Score__c</columns>
    <columns>C_Weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Section Responses</label>
</ListView>